crates/analyzer/tests/snapshots/errors__duplicate_field_in_struct.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: duplicate field names in `struct MyStruct`
  ┌─ compile_errors/duplicate_field_in_struct.fe:2:5
  │
2 │     foo: u8
  │     ^^^^^^^ `foo` first defined here
3 │     foo: u8
  │     ------- `foo` redefined here


